Initial attempt at fixing app off bottom of screen on iOS devices
Also handle refreshing page 403 error when not at app root page

--- a/src/App.css
+++ b/src/App.css
@@ -9,16 +9,24 @@
     url("./fonts/Hind-SemiBold.ttf") format("truetype");
 }
 
-.root {
-  position: relative;
+html {
   height: 100vh;
+  height: -webkit-fill-available;
+}
+
+#root,
+.root {
+  height: 100vh;
+  height: -webkit-fill-available;
   min-width: 350px;
-  min-height: 500px;
   max-width: 600px;
+  min-height: 500px;
   margin-left: auto;
   margin-right: auto;
+}
 
-  background: white;
+.root {
+  position: relative;
   font-family: "HindRegular", sans-serif;
   font-style: normal;
 }
